tests/baselines/reference/moduleDuplicateIdentifiers.errors.txt
tests/cases/compiler/moduleDuplicateIdentifiers.ts(1,12): error TS2323: Cannot redeclare exported variable 'Foo'.
tests/cases/compiler/moduleDuplicateIdentifiers.ts(2,12): error TS2323: Cannot redeclare exported variable 'Foo'.
tests/cases/compiler/moduleDuplicateIdentifiers.ts(20,14): error TS2300: Duplicate identifier 'Kettle'.
tests/cases/compiler/moduleDuplicateIdentifiers.ts(24,14): error TS2300: Duplicate identifier 'Kettle'.


==== tests/cases/compiler/moduleDuplicateIdentifiers.ts (4 errors) ====
    export var Foo = 2;
               ~~~
!!! error TS2323: Cannot redeclare exported variable 'Foo'.
    export var Foo = 42; // Should error
               ~~~
!!! error TS2323: Cannot redeclare exported variable 'Foo'.
    
    export interface Bar {
    	_brand1: any;
    }
    
    export interface Bar { // Shouldn't error
    	_brand2: any;
    }
    
    export namespace FooBar {
    	export var member1 = 2;
    }
    
    export namespace FooBar { // Shouldn't error
    	export var member2 = 42;
    }
    
    export class Kettle {
                 ~~~~~~
!!! error TS2300: Duplicate identifier 'Kettle'.
    	member1 = 2;
    }
    
    export class Kettle { // Should error
                 ~~~~~~
!!! error TS2300: Duplicate identifier 'Kettle'.
    	member2 = 42;
    }
    
    export var Pot = 2;
    Pot = 42; // Shouldn't error
    
    export enum Utensils {
    	Spoon,
    	Fork,
    	Knife
    }
    
    export enum Utensils { // Shouldn't error
    	Spork = 3
    }
    